Fix: Run screen broken in Safari

--- a/web/static/theme/theme-common.less
+++ b/web/static/theme/theme-common.less
@@ -10,8 +10,6 @@ body {
     -webkit-user-select: none;
     -webkit-text-size-adjust: none;
     font-family: Helvetica;
-    -webkit-perspective: 800;
-    -webkit-transform-style: preserve-3d;
     -webkit-touch-callout: none;
 }
 .selectable, input, textarea { -webkit-user-select: auto; }
@@ -30,7 +28,6 @@ a {
 
 
 .screen {
-    -webkit-backface-visibility: hidden;
     position: absolute;
     top: 0px;
     left: 0px;
